--- a/games.html
+++ b/games.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Tic Tac Toe</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body class="game-page">
+
+  <h1>🎮 Tic Tac Toe</h1>
+
+  <div class="board" id="board">
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+  </div>
+
+  <h2 id="status">Player X Turn</h2>
+
+  <button onclick="restartGame()">Restart</button>
+
+  <script src="game.js"></script>
+
+</body>
+</html>
 
